fix the 'done' button being covered up by the timer on mobile

--- a/src/app/bricks/summary.component.scss
+++ b/src/app/bricks/summary.component.scss
@@ -1,16 +1,3 @@
-.timer-container {
-    position: fixed;
-    bottom: 5px;
-    right: 5px;
-    display: flex;
-    z-index: 100;
-}
-
-.timer {
-    font-size: 20px;
-    background-color: #fff;
-}
-
 .container {
     padding: 1vw;
     height: 100%;
